@@ -1,14 +1,15 @@
- $Id: ChangeLog,v 1.131.2.25.2.72 2010/09/17 10:20:51 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.25.2.73 2010/09/17 10:22:51 uehira Exp $
 
 2010-09-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* src/wadd2.c : 64 bit clean.
 	* src/rtape.c : 64 bit clean.
+	* src/wtime.c : 64 bit clean.
 	* rename MACROs
 	  SWAPL --> SWAP32
 	  SWAPS --> SWAP16
 	  MKSWAPS --> MKSWAP16
 	* replace read_data() with read_onesec_win2() [src/winlib.c]
-	  src/wch.c, src/wchch.c, src/wed.c
+	  src/wch.c, src/wchch.c, src/wed.c, src/wtime.c
 
 2010-09-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* src/wadd.c : 64 bit clean.
